--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 anyio==3.7.0
 attrs==23.1.0
 Automat==22.10.0
+azure-ai-textanalytics==5.3.0
+azure-common==1.1.28
+azure-core==1.28.0
 beautifulsoup4==4.12.2
 certifi==2023.5.7
 cffi==1.15.1
@@ -24,6 +27,7 @@ hyperframe==5.2.0
 hyperlink==21.0.0
 idna==2.10
 incremental==22.10.0
+isodate==0.6.1
 itemadapter==0.8.0
 itemloaders==1.1.0
 jmespath==1.0.1
@@ -41,12 +45,12 @@ PyDispatcher==2.0.7
 pymongo==4.4.0
 pyOpenSSL==23.2.0
 python-dotenv==1.0.0
+python-multipart==0.0.6
 queuelib==1.6.2
 regex==2023.6.3
 requests==2.31.0
 requests-file==1.5.1
 rfc3986==1.5.0
-Scrapy==2.9.0
 service-identity==23.1.0
 six==1.16.0
 sniffio==1.3.0
