--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,18 @@
 version: '3.8'
 services:
   app:
+    container_name: app
     build:
       context: .
       dockerfile: Dockerfile
     ports:
-      - 8000:8000
+      - 3000:3000
     depends_on:
       - db
     networks:
       - my-network
   db:
+    container_name: mongodb
     image: mongo:latest
     ports:
       - 27017:27017
