--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 anyio==3.7.0
+astroid==3.0.1
 asttokens==2.2.1
 attrs==23.1.0
 Automat==22.10.0
@@ -19,11 +20,13 @@ cryptography==41.0.1
 cssselect==1.2.0
 debugpy==1.6.7
 decorator==5.1.1
+dill==0.3.7
 dnspython==2.3.0
 executing==1.2.0
 fastapi==0.98.0
 filelock==3.12.2
 googletrans==4.0.0rc1
+graphviz==0.20.1
 h11==0.9.0
 h2==3.2.0
 hpack==3.0.0
@@ -36,9 +39,11 @@ hyperlink==21.0.0
 idna==2.10
 imgkit==1.2.3
 incremental==22.10.0
+iniconfig==2.0.0
 ipykernel==6.24.0
 ipython==8.14.0
 isodate==0.6.1
+isort==5.12.0
 itemadapter==0.8.0
 itemloaders==1.1.0
 jedi==0.18.2
@@ -48,8 +53,12 @@ jupyter_client==8.3.0
 jupyter_core==5.3.1
 lxml==4.9.2
 matplotlib-inline==0.1.6
+mccabe==0.7.0
+mypy==1.6.1
+mypy-extensions==1.0.0
 nest-asyncio==1.5.6
 nltk==3.8.1
+nose2==0.14.0
 numpy==1.25.1
 packaging==23.1
 parsel==1.8.1
@@ -58,6 +67,7 @@ pexpect==4.8.0
 pickleshare==0.7.5
 Pillow==10.0.0
 platformdirs==3.8.1
+pluggy==1.3.0
 prompt-toolkit==3.0.39
 Protego==0.2.1
 psutil==5.9.5
@@ -70,8 +80,10 @@ pycparser==2.21
 pydantic==1.10.9
 PyDispatcher==2.0.7
 Pygments==2.15.1
+pylint==3.0.2
 pymongo==4.4.0
 pyOpenSSL==23.2.0
+pytest==7.4.3
 python-dateutil==2.8.2
 python-dotenv==1.0.0
 python-multipart==0.0.6
@@ -91,6 +103,7 @@ starlette==0.27.0
 tabulate==0.9.0
 textblob==0.17.1
 tldextract==3.4.4
+tomlkit==0.12.1
 tornado==6.3.2
 tqdm==4.65.0
 traitlets==5.9.0
