chore: changes to environment variables and docker

--- a/.env copy
+++ b/.env copy
@@ -1,7 +1,8 @@
-# MONGODB_HOST=localhost
-MONGODB_HOST=mongodb://dev:password@mongodb:27017/
+MONGODB_HOST=localhost
 MONGODB_PORT=27017
-MONGODB_DATABASE=schedules_database
+MONGODB_DATABASE=schedule-generator
+MONGODB_USER=dev
+MONGODB_PASSWORD=password
 
 AZURE_LANGUAGE_ENDPOINT=<azure cognitive services language endpoint>
 AZURE_LANGUAGE_KEY=<azure cognitive services language key>
