--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.8'
 services:
   app:
-    container_name: app
+    container_name: FastAPI-application
     build:
       context: .
       dockerfile: Dockerfile
@@ -14,9 +14,11 @@ services:
     env_file:
       - .env
     environment:
-      - MONGODB_HOST=${MONGODB_HOST}
-      - MONGODB_PORT=${MONGODB_PORT}
+      - MONGODB_HOST=mongodb
+      - MONGODB_PORT=27017
       - MONGODB_DATABASE=${MONGODB_DATABASE}
+      - MONGODB_USER=${MONGODB_USER}
+      - MONGODB_PASSWORD=${MONGODB_PASSWORD}
       - AZURE_LANGUAGE_ENDPOINT=${AZURE_LANGUAGE_ENDPOINT}
       - AZURE_LANGUAGE_KEY=${AZURE_LANGUAGE_KEY}
 
@@ -29,6 +31,12 @@ services:
       - ./data:/data/db
     networks:
       - my-network
+    env_file:
+      - .env
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=${MONGODB_USER}
+      - MONGO_INITDB_ROOT_PASSWORD=${MONGODB_PASSWORD}
+
 networks:
   my-network:
     driver: bridge
