--- a/.env copy
+++ b/.env copy
@@ -1,5 +1,2 @@
-MONGODB_HOST=localhost
-MONGODB_PORT=27017
-MONGODB_DATABASE=schedule-generator
-MONGODB_USER=dev
-MONGODB_PASSWORD=password
+MONGODB_CONNECTION_STRING=
+MONGODB_DATABASE=
