--- a/.github/workflows/main_schedule-generator.yml
+++ b/.github/workflows/main_schedule-generator.yml
@@ -1,8 +1,7 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
-# More info on Python, GitHub Actions, and Azure App Service: https://aka.ms/python-webapps-actions
 
-name: Build and deploy Python app to Azure Web App - schedule-generator
+name: Build and deploy container app to Azure Web App - schedule-generator-api
 
 on:
   push:
@@ -12,58 +11,41 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: 'ubuntu-latest'
 
     steps:
-      - uses: actions/checkout@v4
+    - uses: actions/checkout@v2
 
-      - name: Set up Python version
-        uses: actions/setup-python@v1
-        with:
-          python-version: '3.9'
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2
 
-      - name: Create and start virtual environment
-        run: |
-          python -m venv venv
-          source venv/bin/activate
-      
-      - name: Install dependencies
-        run: pip install -r requirements.txt
-        
-      # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
+    - name: Log in to registry
+      uses: docker/login-action@v2
+      with:
+        registry: https://schedulegenerator.azurecr.io/
+        username: ${{ secrets.AzureAppService_ContainerUsername_4153fe2405a940f0ad6ad001e4b5fec4 }}
+        password: ${{ secrets.AzureAppService_ContainerPassword_2bf2af0c3e2c40639509bb83fbbc5cdb }}
 
-      - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
-
-      - name: Upload artifact for deployment jobs
-        uses: actions/upload-artifact@v3
-        with:
-          name: python-app
-          path: |
-            release.zip
-            !venv/
+    - name: Build and push container image to registry
+      uses: docker/build-push-action@v3
+      with:
+        push: true
+        tags: schedulegenerator.azurecr.io/${{ secrets.AzureAppService_ContainerUsername_4153fe2405a940f0ad6ad001e4b5fec4 }}/schedule-generator-api:${{ github.sha }}
+        file: ./Dockerfile
 
   deploy:
     runs-on: ubuntu-latest
     needs: build
     environment:
-      name: 'Production'
+      name: 'production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-    
+
     steps:
-      - name: Download artifact from build job
-        uses: actions/download-artifact@v3
-        with:
-          name: python-app
-
-      - name: Unzip artifact for deployment
-        run: unzip release.zip
-
-      
-      - name: 'Deploy to Azure Web App'
-        uses: azure/webapps-deploy@v2
-        id: deploy-to-webapp
-        with:
-          app-name: 'schedule-generator'
-          slot-name: 'Production'
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_724DAE1EB1044D0CBDAA71C3BE4F971E }}
+    - name: Deploy to Azure Web App
+      id: deploy-to-webapp
+      uses: azure/webapps-deploy@v2
+      with:
+        app-name: 'schedule-generator-api'
+        slot-name: 'production'
+        publish-profile: ${{ secrets.AzureAppService_PublishProfile_d2bfbd73f7494af0b04baa8f9ecefd58 }}
+        images: 'schedulegenerator.azurecr.io/${{ secrets.AzureAppService_ContainerUsername_4153fe2405a940f0ad6ad001e4b5fec4 }}/schedule-generator-api:${{ github.sha }}'
